--- a/app/src/main/res/layout/fragment_notification_log.xml
+++ b/app/src/main/res/layout/fragment_notification_log.xml
@@ -14,12 +14,29 @@
         android:layout_marginBottom="16dp"
         android:gravity="center" />
 
-    <Button
-        android:id="@+id/btnTestNotification"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Send Test Notification"
-        android:layout_marginBottom="16dp" />
+        android:orientation="horizontal"
+        android:layout_marginBottom="16dp">
+
+        <Button
+            android:id="@+id/btnTestNotification"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Send Test"
+            android:layout_marginEnd="8dp" />
+
+        <Button
+            android:id="@+id/btnClearNotifications"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Clear All"
+            android:layout_marginStart="8dp" />
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
